right bottom button added

--- a/index.html
+++ b/index.html
@@ -169,17 +169,10 @@
 
 
   <section class="">
-    <!-- <div class="">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="ismv3-main-banner"></div>
-        </div>
-      </div>
-    </div> -->
 
     <div class="hero-banner">
       <video class="hero-video" autoplay muted loop>
-        <source src="./video/Semicon_banner_video.mp4" type="video/mp4">
+        <source src="./video/ism_banner_480.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="container">
@@ -188,7 +181,6 @@
           <p>Vision to build a vibrant</p>
           <h1>Semiconductor & Display Ecosystem</h1>
           <p>to enable India’s emergence as a global hub for <br> electronics manufacturing and design</p>
-          <!-- <a href="#explore" class="btn">Explore More</a> -->
         </div>
       </div>
     </div>
