--- a/events-futuredesign2023.html
+++ b/events-futuredesign2023.html
@@ -1025,6 +1025,17 @@
       </div>
     </div>
   </section>
+
+  <div id="to-top">
+    <div class="socials-container">
+      <a data-social="Gallery" href="#" class="icon-btn d-none">
+        <svg role="img" viewBox="0 0 24 24"><path d="M21.483 18.308L6.056 14.085l2.52-9.201L24 9.104l-2.517 9.204zm-13.414-5.37l12.263 3.354 1.654-6.033L9.72 6.9l-1.65 6.034v.004zM8.526 15.795l-4.891 1.311-1.625-6.045 4.146-1.11.501-1.835L0 9.902l2.478 9.215 9.178-2.467"/></svg>      </a>
+      <a data-social="Video" href="https://www.youtube.com/watch?v=sXvfxVv8j-s&list=PLGwyor3A0OIpKNEjn7DKmNuy-1iIuzZnJ" class="icon-btn" target="_blank">
+        <svg role="img" viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+      </a>
+    </div>
+  </div>
+
   <footer class="ism-footer pt-5 pb-3">
     <div class="container">
       <div class="row">
