--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./css/common.css">
 
   <link rel="stylesheet" href="./css/flickety.css">
+
 </head>
 
 <body>
@@ -81,7 +82,7 @@
         <ul class="nav__list">
           <li><a href="/index.html" class="nav__link"><span class="header_active__link">Home</span></a></li>
           <li class="dropdown__item">
-            <div class="nav__link">
+            <div class="nav__link dropdown__toggle">
               About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i>
             </div>
             <ul class="dropdown__menu">
@@ -95,7 +96,7 @@
             </ul>
           </li>
           <li class="dropdown__item">
-            <div class="nav__link">
+            <div class="nav__link dropdown__toggle">
               SemiconIndia <i class="ri-arrow-down-s-line dropdown__arrow"></i>
             </div>
             <ul class="dropdown__menu">
@@ -106,7 +107,7 @@
             </ul>
           </li>
           <li class="dropdown__item">
-            <div class="nav__link">
+            <div class="nav__link dropdown__toggle">
               Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i>
             </div>
             <ul class="dropdown__menu">
@@ -117,7 +118,7 @@
             </ul>
           </li>
           <li class="dropdown__item">
-            <div class="nav__link">
+            <div class="nav__link dropdown__toggle">
               Notifications <i class="ri-arrow-down-s-line dropdown__arrow"></i>
             </div>
             <ul class="dropdown__menu">
